ensure video covers screen at varying breakpoints

--- a/media/styles.css
+++ b/media/styles.css
@@ -49,18 +49,21 @@ body {
 @media (min-width: 640px) {
   .wrapper > video {
     left: -150px;
+    min-width: calc(100% + 150px);
   }
 }
 
 @media (min-width: 768px) {
   .wrapper > video {
     left: -100px;
+    min-width: calc(100% + 100px);
   }
 }
 
 @media (min-width: 1024px) {
   .wrapper > video {
     left: -50px;
+    min-width: calc(100% + 50px);
   }
 }
 
